k8s/flask-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app
  namespace: user-api

spec:
  selector:
    app: user-app

  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http

  type: NodePort
